--- a/peacebreak/square-webview.html
+++ b/peacebreak/square-webview.html
@@ -1,241 +1,306 @@
-<!--
-  Usage:
-  - For sandbox: https://your-domain.com/square-webview.html?env=sandbox
-  - For production: https://your-domain.com/square-webview.html?env=production (or omit for default)
-  - You can set your sandbox and production App IDs and Location IDs below.
--->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Subscribe to PeaceBreak</title>
   <meta name="color-scheme" content="light dark">
-  <script>
-    // ---- CONFIGURATION ----
-    // Set your credentials here
-    const SQUARE_CONFIG = {
-      sandbox: {
-        script: 'https://sandbox.web.squarecdn.com/v1/square.js',
-        appId: 'sandbox-sq0idb-Dfm_eh4V58DLUu-esACSig', // <-- your sandbox App ID
-        locationId: 'LG4QHA89Q3MPE', // <-- your sandbox Location ID
-      },
-      production: {
-        script: 'https://web.squarecdn.com/v1/square.js',
-        appId: 'REPLACE_WITH_YOUR_PRODUCTION_APP_ID', // <-- your production App ID
-        locationId: 'REPLACE_WITH_YOUR_PRODUCTION_LOCATION_ID', // <-- your production Location ID
-      }
-    };
-    // TEMPORARY: Always use sandbox credentials for now
-    const env = 'sandbox'; // override any URL param
-    const { script: SQUARE_SCRIPT_SRC, appId: SQUARE_APP_ID, locationId: SQUARE_LOCATION_ID } = SQUARE_CONFIG[env];
-    // Dynamically load the correct Square script
-    document.write(`<script src='${SQUARE_SCRIPT_SRC}'><\/script>`);
-  </script>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     :root {
-      --primary: #4FC3F7;
+      --primary: #4FC3F7;      /* Blue accent */
       --accent: #FF8C32;
-      --bg: #181C24;
-      --card-bg: #23293A;
-      --text: #fff;
-      --error: #ff4d4f;
-      --success: #4CAF50;
-      --radius: 18px;
-      --shadow: 0 4px 24px rgba(0,0,0,0.18);
+      --bg: #181C24;           /* Dark page background */
+      --card-bg: #23293A;      /* Dark card background */
+      --text: #fff;            /* White text on dark */
+      --error: #ff4d4f;        /* Red for errors */
+      --success: #4CAF50;      /* Green for lock background and button */
+      --radius: 16px;          /* Rounded corners */
+      --shadow: 0 4px 20px rgba(0,0,0,0.2);
     }
-    html, body {
-      height: 100%;
+    * {
+      box-sizing: border-box;
+    }
+    body {
       margin: 0;
       padding: 0;
       background: var(--bg);
+      font-family: 'Inter', sans-serif;
       color: var(--text);
-      font-family: 'Inter', 'Segoe UI', Arial, sans-serif;
-      min-height: 100vh;
     }
     .container {
-      min-height: 100vh;
       display: flex;
+      flex-direction: column;
       align-items: center;
-      justify-content: center;
+      justify-content: flex-start;
+      min-height: 100vh;
+      padding: 2rem 1.5rem;
       background: linear-gradient(135deg, #23293A 0%, #181C24 100%);
     }
+
+    /* ------------------------------
+       Big Company Name Heading
+       ------------------------------ */
+    .brand-heading {
+      font-size: 2.8rem;
+      font-weight: 800;
+      margin-bottom: 1rem;
+      text-align: center;
+      color: var(--primary);
+      letter-spacing: 1px;
+    }
+    .brand-heading span.dove {
+      font-size: 2.8rem;
+      margin-left: 0.5rem;
+    }
+
+    /* ------------------------------
+       Card (Subscription Form)
+       ------------------------------ */
     .card {
       background: var(--card-bg);
       border-radius: var(--radius);
       box-shadow: var(--shadow);
-      padding: 2.5rem 2rem 2rem 2rem;
-      max-width: 370px;
+      padding: 2rem;
       width: 100%;
+      max-width: 400px;
       display: flex;
       flex-direction: column;
-      align-items: center;
-      animation: fadeIn 0.7s;
+      gap: 1rem;
+      animation: fadeIn 0.6s ease-out;
+      margin-top: 1rem;
+      position: relative;
     }
     @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(30px);}
-      to { opacity: 1; transform: translateY(0);}
+      from { opacity: 0; transform: translateY(20px); }
+      to   { opacity: 1; transform: translateY(0); }
     }
-    .logo {
-      width: 54px;
-      height: 54px;
-      border-radius: 50%;
-      background: var(--primary);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      margin-bottom: 1.2rem;
-      font-size: 2.2rem;
-      color: #fff;
-      font-weight: bold;
-      box-shadow: 0 2px 8px rgba(79,195,247,0.18);
-      letter-spacing: 1px;
-    }
-    h1 {
+
+    /* Section Title & Subtitle */
+    .section-title {
       font-size: 1.5rem;
       font-weight: 700;
-      margin: 0 0 0.5rem 0;
-      letter-spacing: 0.5px;
+      margin: 0;
+      text-align: center;
       color: var(--primary);
-      text-align: center;
     }
-    .desc {
-      color: #b0c4d4;
+    .section-subtitle {
       font-size: 1rem;
-      margin-bottom: 1.2rem;
+      color: #b0c4d4;
       text-align: center;
+      margin-bottom: 1rem;
+      line-height: 1.4;
     }
-    .security-info {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      background: none;
-      margin-bottom: 1.1rem;
+
+    /* Card Input Container */
+    #card-container {
       width: 100%;
     }
-    .square-logo-wrap {
-      background: #fff;
-      border-radius: 12px;
-      padding: 8px 18px;
-      margin-bottom: 0.3rem;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.10);
+
+    /* Error + Success Messages */
+    .status {
+      min-height: 1.2em;
+      text-align: center;
+      font-weight: 500;
+    }
+    .error { color: var(--error); }
+    .success { color: var(--success); }
+
+    /* ------------------------------
+       Green “Subscribe $4/mo” Button
+       ------------------------------ */
+    .btn {
+      background: var(--success);
+      color: white;
+      padding: 0.9rem;
+      border: none;
+      border-radius: var(--radius);
+      font-weight: 600;
+      cursor: pointer;
+      font-size: 1rem;
       display: flex;
       align-items: center;
       justify-content: center;
+      transition: background 0.3s ease;
     }
-    .square-badge {
-      height: 36px;
-      width: auto;
-      display: block;
+    .btn:hover {
+      background: #43a047; /* Slightly darker green */
     }
-    .security-text {
-      color: #b0c4d4;
-      font-size: 0.98rem;
-      text-align: center;
-      margin-bottom: 0.2rem;
+    .btn svg {
+      width: 20px;
+      height: 20px;
+      margin-right: 0.5rem;
+      fill: white; /* White lock icon next to “Subscribe” */
     }
-    #card-container {
-      width: 100%;
-      margin-bottom: 0.7rem;
-    }
-    .btn {
-      width: 100%;
-      padding: 0.95rem 0;
-      background: var(--primary);
-      color: #fff;
-      font-size: 1.1rem;
-      font-weight: 600;
-      border: none;
-      border-radius: var(--radius);
-      cursor: pointer;
-      transition: background 0.18s;
-      margin-bottom: 0.7rem;
-      box-shadow: 0 2px 8px rgba(79,195,247,0.10);
-      letter-spacing: 0.5px;
-    }
-    .btn:active {
-      background: #1976d2;
-    }
+
+    /* Terms of Service Link */
     .terms {
       font-size: 0.85rem;
       color: #b0c4d4;
       text-align: center;
-      margin-bottom: 0.5rem;
+      line-height: 1.3;
     }
-    .error, .success {
-      width: 100%;
-      text-align: center;
-      margin-bottom: 0.5rem;
-      font-size: 1rem;
-      font-weight: 500;
-      min-height: 1.2em;
+    .terms a {
+      color: var(--primary);
+      text-decoration: none;
     }
-    .error { color: var(--error);}
-    .success { color: var(--success);}
-    .powered {
-      margin-top: 0.7rem;
-      font-size: 0.85rem;
+    .terms a:hover {
+      text-decoration: underline;
+    }
+
+    /* ------------------------------
+       Footer Text + Badges
+       ------------------------------ */
+    .footer-text {
+      font-size: 0.9rem;
       color: #b0c4d4;
       text-align: center;
-      opacity: 0.7;
+      margin-top: 0.8rem;
+      line-height: 1.4;
     }
+    .badges-footer {
+      display: flex;
+      gap: 1rem;
+      justify-content: center;
+      margin-top: 0.6rem;
+      flex-wrap: wrap;
+    }
+    .badge {
+      background: white;
+      border-radius: 10px;
+      padding: 6px 14px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    /* Square logo (always 40px high for consistency) */
+    .badge img.square-logo {
+      height: 40px;
+      width: auto;
+      display: block;
+    }
+    /* Lock badge: green background + black lock icon */
+    .badge-lock {
+      background: var(--success);
+    }
+    .badge-lock svg {
+      width: 32px;
+      height: 32px;
+      display: block;
+      fill: #000;  /* Black lock icon */
+    }
+
+    /* Responsive tweaks for small screens (optional) */
     @media (max-width: 480px) {
-      .card { padding: 1.2rem 0.5rem 1.5rem 0.5rem; }
-      .square-logo-wrap { padding: 6px 10px; }
-      .square-badge { height: 28px; }
+      .card {
+        padding: 1.2rem 0.5rem 1.5rem 0.5rem;
+      }
     }
-    .close-btn {
-      position: absolute;
-      top: 18px;
-      right: 18px;
-      background: none;
-      border: none;
-      color: #b0c4d4;
-      font-size: 2rem;
-      font-weight: bold;
-      cursor: pointer;
-      z-index: 10;
-      transition: color 0.2s;
-    }
-    .close-btn:hover { color: #FF8C32; }
   </style>
 </head>
 <body>
   <div class="container">
+    <!-- Big “PeaceBreak 🕊️” Heading -->
+    <div class="brand-heading">
+      PeaceBreak<span class="dove">🕊️</span>
+    </div>
+
+    <!-- Subscription Card -->
     <form class="card" id="payment-form" autocomplete="off" onsubmit="return false;">
-      <div class="logo" aria-label="PeaceBreak">🕊️</div>
-      <h1>Subscribe to PeaceBreak</h1>
-      <div class="desc">Securely subscribe for <b>$4/month</b>.<br>Your card is never stored on our servers.</div>
-      <div class="security-info">
-        <div class="square-logo-wrap">
-          <img src="./assets/images/square_logo.png" alt="Secured by Square" class="square-badge" />
-        </div>
-        <span class="security-text">Payments are encrypted and PCI DSS compliant via Square.</span>
+      <!-- Section Title -->
+      <h2 class="section-title">Subscribe to PeaceBreak</h2>
+
+      <!-- Updated Subtitle Text -->
+      <div class="section-subtitle">
+			<p>Enjoy every PeaceBreak feature and peaceful tracks for less than the cost of a coffee per month&mdash;no ads ever, no hidden fees, one simple plan. Cancel anytime.</p>
+        <p>Your payment information is securely processed by Square.</p>
       </div>
+
+      <!-- Square Card Input Widget -->
       <div id="card-container"></div>
-      <div class="error" id="error"></div>
-      <div class="success" id="success"></div>
-      <button class="btn" id="pay-btn" type="submit">Subscribe $4/mo</button>
+
+      <!-- Error / Success Messages -->
+      <div class="status error" id="error"></div>
+      <div class="status success" id="success"></div>
+
+      <!-- Green “Subscribe $4/mo” Button with White Lock Icon -->
+      <button class="btn" id="pay-btn" type="submit">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+          <path d="M12 17a2 2 0 110-4 2 2 0 010 4zm6-7h-1V7a5 5 0 00-10 0v3H6a2 2 0 00-2 2v8a2 2 0 002 2h12a2 2 0 002-2v-8a2 2 0 00-2-2zm-8-3a3 3 0 016 0v3H10V7zm8 13H6v-8h12v8z"/>
+        </svg>
+        Subscribe $4/mo
+      </button>
+
+      <!-- “Terms of Service” Link -->
       <div class="terms">
-        By subscribing, you agree to our<br>
-        <a href="https://your-domain.com/terms" target="_blank" rel="noopener">Terms of Service</a> and authorize recurring charges.
+        By subscribing, you agree to our
+        <br>
+        <a href="https://your-domain.com/terms" target="_blank" rel="noopener">
+          Terms of Service
+        </a>
+        and authorize recurring charges.
       </div>
-      <div class="powered">Payments securely processed by <b>Square</b></div>
+
+      <!-- Footer Text -->
+      <div class="footer-text">
+        Processed securely by <strong>Square</strong>. SSL Encrypted.
+      </div>
+
+      <!-- Badges Under Footer Text -->
+      <div class="badges-footer">
+        <!-- 1) Square logo badge -->
+        <div class="badge">
+          <img src="./assets/images/square_logo.png" alt="Square" class="square-logo" />
+        </div>
+        <!-- 2) Lock badge with green background + black lock icon -->
+        <div class="badge badge-lock">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+            <path d="M12 17a2 2 0 110-4 2 2 0 010 4zm6-7h-1V7a5 5 0 00-10 0v3H6a2 2 0 00-2 2v8a2 2 0 002 2h12a2 2 0 002-2v-8a2 2 0 00-2-2zm-8-3a3 3 0 016 0v3H10V7zm8 13H6v-8h12v8z"/>
+          </svg>
+        </div>
+      </div>
     </form>
   </div>
+
+  <!-- ================================
+       Load Square.js & Initialize Form
+       ================================ -->
   <script>
-    // Wait for Square.js to be loaded
+    // The SQUARE_CONFIG object remains the same
+    const SQUARE_CONFIG = {
+      sandbox: {
+        script: 'https://sandbox.web.squarecdn.com/v1/square.js',
+        appId: 'sandbox-sq0idb-Dfm_eh4V58DLUu-esACSig',
+        locationId: 'LG4QHA89Q3MPE',
+      },
+      production: {
+        script: 'https://web.squarecdn.com/v1/square.js',
+        appId: 'REPLACE_WITH_YOUR_PRODUCTION_APP_ID',
+        locationId: 'REPLACE_WITH_YOUR_PRODUCTION_LOCATION_ID',
+      }
+    };
+    // Override to always use sandbox (for testing). In production, swap to:
+    // const env = new URLSearchParams(window.location.search).get('env') === 'production' ? 'production' : 'sandbox';
+    const env = 'sandbox';
+    const { script: SQUARE_SCRIPT_SRC, appId: SQUARE_APP_ID, locationId: SQUARE_LOCATION_ID } = SQUARE_CONFIG[env];
+
+    // Dynamically load the Square.js library
+    document.write(`<script src="${SQUARE_SCRIPT_SRC}"><\/script>`);
+
+    // Wait until Square.js is ready, then attach the card widget
     function onSquareReady(cb) {
       if (window.Square) cb();
       else setTimeout(() => onSquareReady(cb), 50);
     }
+
     let card;
     let form = document.getElementById('payment-form');
     let errorDiv = document.getElementById('error');
     let successDiv = document.getElementById('success');
     let payBtn = document.getElementById('pay-btn');
 
-    onSquareReady(async function initializeSquare() {
+    onSquareReady(async () => {
       try {
         const payments = window.Square.payments(SQUARE_APP_ID, SQUARE_LOCATION_ID);
         card = await payments.card();
@@ -251,36 +316,42 @@
       errorDiv.textContent = '';
       successDiv.textContent = '';
       payBtn.disabled = true;
-      payBtn.textContent = 'Processing...';
+      payBtn.textContent = 'Processing…';
 
       try {
         const result = await card.tokenize();
         if (result.status === 'OK') {
-          successDiv.textContent = 'Card accepted! Finalizing...';
-          // Send token to React Native WebView
-          if (window.ReactNativeWebView && window.ReactNativeWebView.postMessage) {
+          successDiv.textContent = 'Card accepted! Finalizing…';
+          // If inside a ReactNativeWebView, send the token back:
+          if (window.ReactNativeWebView?.postMessage) {
             window.ReactNativeWebView.postMessage(result.token);
             successDiv.textContent = 'Card submitted. You may close this window.';
           } else {
             successDiv.textContent = 'Card token: ' + result.token;
           }
         } else {
-          errorDiv.textContent = (result.errors && result.errors[0] && result.errors[0].message) || 'Card error. Please check your details.';
+          errorDiv.textContent = (result.errors?.[0]?.message) || 'Card error. Please check your details.';
         }
       } catch (err) {
         errorDiv.textContent = 'Payment failed. Please try again.';
       }
+
       payBtn.disabled = false;
-      payBtn.textContent = 'Subscribe $4/mo';
+      payBtn.innerHTML = `
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" style="width:20px;height:20px;fill:white;margin-right:0.5rem;">
+          <path d="M12 17a2 2 0 110-4 2 2 0 010 4zm6-7h-1V7a5 5 0 00-10 0v3H6a2 2 0 00-2 2v8a2 2 0 002 2h12a2 2 0 002-2v-8a2 2 0 00-2-2zm-8-3a3 3 0 016 0v3H10V7zm8 13H6v-8h12v8z"/>
+        </svg>
+        Subscribe $4/mo
+      `;
     });
 
-    // Accessibility: focus on card input after load
+    // After load, focus the card input if possible
     window.onload = () => {
       setTimeout(() => {
-        const cardInput = document.querySelector('iframe');
-        if (cardInput) cardInput.focus();
+        const iframe = document.querySelector('iframe');
+        if (iframe) iframe.focus();
       }, 800);
     };
   </script>
 </body>
-</html> 
+</html>
