--- a/peacebreak/index.html
+++ b/peacebreak/index.html
@@ -1,39 +1,214 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>PeaceBreak</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-  <style>
-    body { margin: 0; font-family: 'Inter', sans-serif; background: #fdfdfd; color: #212121; }
-    header { background: #fff; padding: 1rem 2rem; display: flex; justify-content: space-between; align-items: center; box-shadow: 0 2px 6px rgba(0,0,0,0.06); }
-    nav a { margin-left: 1.5rem; text-decoration: none; color: #6f42c1; font-weight: 600; }
-    section { padding: 3rem 2rem; text-align: center; }
-    .features, .audience { display: flex; flex-wrap: wrap; justify-content: center; gap: 2rem; margin-top: 2rem; }
-    .card { background: #fff; padding: 2rem; border-radius: 8px; width: 300px; text-align: left; box-shadow: 0 2px 8px rgba(0,0,0,0.06); }
-    .card h3 { color: #6f42c1; margin-top: 0; }
-    footer { text-align: center; padding: 2rem; font-size: 0.9em; background: #f1f1f1; }
-  </style>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Lavishly+Yours&display=swap" rel="stylesheet">
+<style>
+  body {
+    margin: 0;
+    font-family: 'Inter', sans-serif;
+    background: #1E1E2E url('./assets/images/background.png') center/cover fixed;
+    color: #F5F5F5;
+    min-height: 100vh;
+    position: relative;
+  }
+
+  body::before {
+    content: '';
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(30, 30, 46, 0.85);
+    z-index: -1;
+  }
+
+  header {
+    background: rgba(45, 45, 63, 0.95);
+    padding: 1rem 2rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    box-shadow: 0 2px 20px rgba(0,0,0,0.3);
+    backdrop-filter: blur(10px);
+  }
+
+  .logo {
+    display: flex;
+    align-items: center;
+    gap: 0.8rem;
+  }
+
+  .logo img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    object-fit: cover;
+    filter: brightness(0) invert(1);
+    background: rgba(120, 165, 163, 0.1);
+    padding: 6px;
+    box-shadow: 0 4px 15px rgba(120, 165, 163, 0.3);
+  }
+
+  .logo-text {
+    font-family: 'Lavishly Yours', cursive;
+    font-size: 1.8rem;
+    color: #78A5A3;
+    font-weight: 400;
+  }
+
+  header nav a {
+    margin-left: 1.5rem;
+    text-decoration: none;
+    color: #78A5A3;
+    font-weight: 600;
+    transition: color 0.3s ease;
+  }
+
+  header nav a:hover {
+    color: #96AF74;
+  }
+
+  .hero {
+    text-align: center;
+    padding: 6rem 2rem 4rem;
+    background: rgba(47, 47, 79, 0.6);
+    backdrop-filter: blur(15px);
+    margin: 2rem;
+    border-radius: 20px;
+    box-shadow: 0 8px 32px rgba(0,0,0,0.3);
+  }
+
+  .hero h1 {
+    font-size: 3.5em;
+    color: #78A5A3;
+    margin-bottom: 1rem;
+    text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
+  }
+
+  .hero p {
+    font-size: 1.3em;
+    max-width: 700px;
+    margin: 1rem auto 2rem;
+    color: #A9B1B5;
+    line-height: 1.6;
+  }
+
+  .hero a {
+    background: linear-gradient(135deg, #78A5A3, #96AF74);
+    color: #fff;
+    padding: 1rem 2rem;
+    border-radius: 30px;
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 1.1rem;
+    transition: all 0.3s ease;
+    box-shadow: 0 4px 15px rgba(120, 165, 163, 0.3);
+  }
+
+  .hero a:hover {
+    transform: translateY(-2px);
+    box-shadow: 0 6px 20px rgba(120, 165, 163, 0.4);
+  }
+
+  section {
+    padding: 4rem 2rem;
+    text-align: center;
+  }
+
+  .card {
+    background: rgba(44, 44, 63, 0.8);
+    max-width: 700px;
+    margin: 2rem auto;
+    padding: 2.5rem;
+    border-radius: 20px;
+    box-shadow: 0 8px 32px rgba(0,0,0,0.2);
+    backdrop-filter: blur(10px);
+    border: 1px solid rgba(120, 165, 163, 0.1);
+  }
+
+  h1 {
+    font-size: 3rem;
+    color: #78A5A3;
+    margin-bottom: 1rem;
+    text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
+  }
+
+  h2 {
+    color: #96AF74;
+    font-size: 2rem;
+    margin-bottom: 1.5rem;
+  }
+
+  h3 {
+    color: #78A5A3;
+    font-size: 1.4rem;
+    margin-bottom: 1rem;
+  }
+
+  p {
+    color: #A9B1B5;
+    line-height: 1.6;
+    font-size: 1.1rem;
+  }
+
+  .features, .audience {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 2rem;
+    margin-top: 2rem;
+  }
+
+  footer {
+    text-align: center;
+    padding: 3rem 2rem;
+    font-size: 0.9em;
+    background: rgba(25, 25, 41, 0.9);
+    color: #A9B1B5;
+    backdrop-filter: blur(10px);
+    border-top: 1px solid rgba(120, 165, 163, 0.1);
+  }
+
+  @media (max-width: 768px) {
+    .hero {
+      margin: 1rem;
+      padding: 4rem 1.5rem 3rem;
+    }
+    
+    .hero h1 {
+      font-size: 2.5em;
+    }
+    
+    .features, .audience {
+      grid-template-columns: 1fr;
+    }
+  }
+</style>
 </head>
 <body>
   <header>
-    <div><strong style="color:#6f42c1;">PeaceBreak</strong></div>
+    <div class="logo">
+      <img src="./assets/images/lotus-icon.jpg" alt="PeaceBreak Logo">
+      <span class="logo-text">PeaceBreak</span>
+    </div>
     <nav>
       <a href="../index.html">Home</a>
-      <a href="./paymentthankyou.html">Payment Thank You</a>
     </nav>
   </header>
 
-  <section>
+  <section class="hero">
     <h1>Find Your PeaceBreak</h1>
     <p>Shake. Tap. Schedule. PeaceBreak brings mindfulness into your day — even when you forget to breathe.</p>
   </section>
 
   <section>
     <h2>🧠 What Is PeaceBreak?</h2>
-    <p>PeaceBreak is a minimalist ambient audio application that lets you trigger intentional moments of calm in the background — without opening the app or disrupting your workflow. It’s mindfulness without the burden of mindfulness apps.</p>
+    <div class="card">
+      <p>PeaceBreak is a minimalist ambient audio application that lets you trigger intentional moments of calm in the background — without opening the app or disrupting your workflow. It's mindfulness without the burden of mindfulness apps.</p>
+    </div>
   </section>
 
   <section>
