--- a/peacebreak/paymentthankyou.html
+++ b/peacebreak/paymentthankyou.html
@@ -1,32 +1,124 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Thank You – PeaceBreak</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Lavishly+Yours&display=swap" rel="stylesheet">
   <style>
     body {
       font-family: 'Inter', sans-serif;
-      background: #f0f0f0;
+      background: #1E1E2E url('./assets/images/background.png') center/cover fixed;
+      color: #F5F5F5;
+      margin: 0;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
       text-align: center;
-      padding-top: 15vh;
-      color: #4b0082;
+      position: relative;
     }
-    h1 {
+
+    body::before {
+      content: '';
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(30, 30, 46, 0.85);
+      z-index: -1;
+    }
+
+    .container {
+      background: rgba(44, 44, 63, 0.9);
+      padding: 4rem 3rem;
+      border-radius: 20px;
+      box-shadow: 0 8px 32px rgba(0,0,0,0.3);
+      backdrop-filter: blur(15px);
+      border: 1px solid rgba(120, 165, 163, 0.2);
+      max-width: 600px;
+      margin: 2rem;
+    }
+
+    .logo {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 1rem;
+      margin-bottom: 2rem;
+    }
+
+    .logo img {
+      width: 60px;
+      height: 60px;
+      border-radius: 50%;
+      object-fit: cover;
+      filter: brightness(0) invert(1);
+      background: rgba(120, 165, 163, 0.1);
+      padding: 8px;
+      box-shadow: 0 4px 15px rgba(120, 165, 163, 0.3);
+    }
+
+    .logo-text {
+      font-family: 'Lavishly Yours', cursive;
       font-size: 2.5rem;
+      color: #78A5A3;
+      font-weight: 400;
     }
+
+    h1 {
+      font-size: 2.8rem;
+      color: #78A5A3;
+      margin-bottom: 1.5rem;
+      text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
+    }
+
     p {
-      font-size: 1.1rem;
-      margin: 1rem auto;
+      font-size: 1.2rem;
+      margin: 1.5rem auto;
       max-width: 500px;
+      color: #A9B1B5;
+      line-height: 1.6;
+    }
+
+    .success-icon {
+      font-size: 4rem;
+      color: #96AF74;
+      margin-bottom: 1rem;
+    }
+
+    .back-link {
+      display: inline-block;
+      margin-top: 2rem;
+      padding: 0.8rem 1.5rem;
+      background: linear-gradient(135deg, #78A5A3, #96AF74);
+      color: white;
+      text-decoration: none;
+      border-radius: 25px;
+      font-weight: 600;
+      transition: all 0.3s ease;
+      box-shadow: 0 4px 15px rgba(120, 165, 163, 0.3);
+    }
+
+    .back-link:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 6px 20px rgba(120, 165, 163, 0.4);
     }
   </style>
 </head>
 <body>
-  <h1>Thank You for Subscribing!</h1>
-  <p>Your PeaceBreak premium subscription is now active. We're grateful to have you with us.</p>
-  <p>You may now return to the app and enjoy your scheduled and shake-triggered moments of calm.</p>
+  <div class="container">
+    <div class="logo">
+      <img src="./assets/images/lotus-icon.jpg" alt="PeaceBreak Logo">
+      <span class="logo-text">PeaceBreak</span>
+    </div>
+    <div class="success-icon">✨</div>
+    <h1>Thank You for Subscribing!</h1>
+    <p>Your PeaceBreak premium subscription is now active. We're grateful to have you with us.</p>
+    <p>You may now return to the app and enjoy your scheduled and shake-triggered moments of calm.</p>
+    <a href="./index.html" class="back-link">← Back to PeaceBreak</a>
+  </div>
 </body>
 </html>
